# relm_bar

./: Cargo.toml
src/: app.rs  main.rs  styles.css
src/components/: layout_selector.rs  mod.rs  status_strip.rs  workspaces.rs
src/resources/: main_layout.ui
