[package]
name = "relm_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
log = "0.4.33"
relm4 = { version = "0.11.0", features = ["libadwaita"] }
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
