[package]
name = "relm_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.33"
relm4 = { version = "0.11.0", features = ["libadwaita"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git", default-features = false, features = ["clock-chrono", "logging-flexi", "provider-alsa", "provider-system", "transport-shared"] }
